platform/19-nanitics-observatory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nanitics-observatory
  namespace: uwv-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nanitics-observatory
  ports:
    - name: http
      port: 80
      targetPort: 8001
